--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <section id="about" style="display:block;">
             <h1>About Me</h1>
             <hr>
-            <p>Write about yourself here.</p>
+            <p>I am a Quant Strat and a recent graduate in an MEng in Mathematics and Computer Science from University College London.</p>
+            <p>My academic interests are in Machine Learning, Deep Learning and Computational Biology.</p>
         </section>
         <section id="research">
             <h1>Projects & Research</h1>
