--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p>MEng Dissertation</p>
                 <p>Worked on using T cell receptor LLM's embedding space to predict cancer; demonstrated physico-chemical embeddings are not as expressive as embeddings created by LLMs.</p>
                 <p>
-                    <a href="https://github.com/RcwYuen/TCR-Cancer-Prediction/blob/main/manuscript.pdf">Manuscript</a>
+                    <a href="https://github.com/RcwYuen/TCR-Cancer-Prediction/blob/main/manuscript.pdf" target="_blank" id="cv-link">Manuscript</a>
                     <a href="https://github.com/RcwYuen/TCR-Cancer-Prediction/tree/main">GitHub</a>
                 </p>
             </div>
