--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li><a href="#about" class="active">About Me</a></li>
                     <li><a href="#research">Projects & Research</a></li>
                     <li><a href="cv.pdf" target="_blank" id="cv-link">CV</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,13 +26,6 @@
             <hr>
             <p>I am a Quant Strat and a recent graduate in an MEng in Mathematics and Computer Science from University College London.</p>
             <p>My academic interests are in Machine Learning, Deep Learning and Computational Biology.</p>
-            <br><br><br><br><br>
-            <hr>
-            <h1>Contact</h1>
-            <hr>
-            <p><img src="https://media.licdn.com/dms/image/C560BAQHaVYd13rRz3A/company-logo_200_200/0/1638831590218/linkedin_logo?e=1723680000&v=beta&t=px3qCYOYDjGUOqiylz7LEi-bAdIuIwoHIcNNi1ErrkE" alt="LinkedIn Icon" class="icon"><a href="https://www.linkedin.com/in/rcwyuen">LinkedIn</a></p>
-            <p><img src="https://cdn-icons-png.flaticon.com/128/4902/4902208.png" alt="Email Icon" class="icon"><a href="mailto:r.yuen.20@alumni.ucl.ac.uk">Email</a></p>
-            <p><img src="https://media.licdn.com/dms/image/C560BAQFmuLSyL1nlPA/company-logo_200_200/0/1678231359043/github_logo?e=1723680000&v=beta&t=vUUTZ4-dwCNBAi9IIjkngbhxWc-gXZJaRtDxq7xVgHg" alt="GitHub Icon" class="icon"><a href="https://github.com/RcwYuen">GitHub</a></p>
         </section>
         <section id="research">
             <h1>Projects & Research</h1>
@@ -41,10 +35,17 @@
                 <p>MEng Dissertation</p>
                 <p>Worked on using T cell receptor LLM's embedding space to predict cancer; demonstrated physico-chemical embeddings are not as expressive as embeddings created by LLMs.</p>
                 <p>
-                    <a href="https://github.com/RcwYuen/TCR-Cancer-Prediction/blob/main/manuscript.pdf?raw=true" target="_blank">Manuscript</a>
+                    <a href="https://raw.githubusercontent.com/RcwYuen/TCR-Cancer-Prediction/main/manuscript.pdf" target="_blank">Manuscript</a>
                     <a href="https://github.com/RcwYuen/TCR-Cancer-Prediction/tree/main">GitHub</a>
                 </p>
             </div>
+        </section>
+        <section id="contact">
+            <h1>Contact</h1>
+            <hr>
+            <p><img src="https://media.licdn.com/dms/image/C560BAQHaVYd13rRz3A/company-logo_200_200/0/1638831590218/linkedin_logo?e=1723680000&v=beta&t=px3qCYOYDjGUOqiylz7LEi-bAdIuIwoHIcNNi1ErrkE" alt="LinkedIn Icon" class="icon"><a href="https://www.linkedin.com/in/rcwyuen">LinkedIn</a></p>
+            <p><img src="https://cdn-icons-png.flaticon.com/128/4902/4902208.png" alt="Email Icon" class="icon"><a href="mailto:r.yuen.20@alumni.ucl.ac.uk">Email</a></p>
+            <p><img src="https://media.licdn.com/dms/image/C560BAQFmuLSyL1nlPA/company-logo_200_200/0/1678231359043/github_logo?e=1723680000&v=beta&t=vUUTZ4-dwCNBAi9IIjkngbhxWc-gXZJaRtDxq7xVgHg" alt="GitHub Icon" class="icon"><a href="https://github.com/RcwYuen">GitHub</a></p>
         </section>
     </main>
     <script src="scripts.js"></script>
