--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="#about" class="active">About Me</a></li>
                     <li><a href="#research">Projects & Research</a></li>
-                    <li><a href="cv.pdf" target="_blank" id="cv-link">CV</a></li>
+                    <li><a href="docs/cv.pdf" target="_blank" id="cv-link">CV</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -35,7 +35,7 @@
                 <p>MEng Dissertation</p>
                 <p>Worked on using T cell receptor LLM's embedding space to predict cancer; demonstrated physico-chemical embeddings are not as expressive as embeddings created by LLMs.</p>
                 <p>
-                    <a href="https://raw.githubusercontent.com/RcwYuen/TCR-Cancer-Prediction/main/manuscript.pdf" target="_blank">Manuscript</a>
+                    <a href="docs/dissertation.pdf" target="_blank">Manuscript</a>
                     <a href="https://github.com/RcwYuen/TCR-Cancer-Prediction/tree/main">GitHub</a>
                 </p>
             </div>
