--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>About Me</h1>
             <hr>
             <p>I am a Quant Strat and a recent graduate in an MEng in Mathematics and Computer Science from University College London.</p>
-            <p>My academic interests are in Machine Learning, Deep Learning and Computational Biology.</p>
+            <p>My academic interests are in Machine Learning, Quantitative Finance, Deep Learning and Computational Biology.</p>
         </section>
         <section id="research">
             <h1>Projects & Research</h1>
