--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <section id="about" style="display:block;">
             <h1>About Me</h1>
             <hr>
-            <p>I am a Quant Strat and a recent graduate in an MEng in Mathematics and Computer Science from University College London.</p>
-            <p>My academic interests are in Machine Learning, Quantitative Finance, Deep Learning and Computational Biology.</p>
+            <p>I am a Quantitative Strategist and a recent graduate in MEng Mathematics and Computer Science from University College London (UCL).</p>
+            <p>My studies are focused on Machine Learning and Statistics, and I am interested in learning more about Machine Learning, Quantitative Finance, Deep Learning and Computational Biology.</p>
         </section>
         <section id="research">
             <h1>Projects & Research</h1>
             <hr>
             <div class="publication">
                 <p><strong>Multiple Instance Transfer Learning on T cell receptor LLMs for Cancer Prediction</strong></p>
-                <p>MEng Dissertation</p>
+                <p>M.Eng. Dissertation (Graded 80%)</p>
                 <p>
                     <a href="docs/dissertation.pdf" target="_blank">Manuscript</a>
                     <a href="https://github.com/RcwYuen/TCR-Cancer-Prediction/tree/main">GitHub</a>
@@ -43,7 +43,7 @@
             <h1>Contact</h1>
             <hr>
             <p><img src="https://media.licdn.com/dms/image/C560BAQHaVYd13rRz3A/company-logo_200_200/0/1638831590218/linkedin_logo?e=1723680000&v=beta&t=px3qCYOYDjGUOqiylz7LEi-bAdIuIwoHIcNNi1ErrkE" alt="LinkedIn Icon" class="icon"><a href="https://www.linkedin.com/in/rcwyuen">LinkedIn</a></p>
-            <p><img src="https://cdn-icons-png.flaticon.com/128/4902/4902208.png" alt="Email Icon" class="icon"><a href="mailto:r.yuen.20@alumni.ucl.ac.uk">Email</a></p>
+            <p><img src="https://cdn-icons-png.flaticon.com/128/4902/4902208.png" alt="Email Icon" class="icon"><a href="mailto:zcabcry@ucl.ac.uk">Email</a></p>
             <p><img src="https://media.licdn.com/dms/image/C560BAQFmuLSyL1nlPA/company-logo_200_200/0/1678231359043/github_logo?e=1723680000&v=beta&t=vUUTZ4-dwCNBAi9IIjkngbhxWc-gXZJaRtDxq7xVgHg" alt="GitHub Icon" class="icon"><a href="https://github.com/RcwYuen">GitHub</a></p>
         </section>
     </main>
