--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section id="about" style="display:block;">
             <h1>About Me</h1>
             <hr>
-            <p>I am a Quantitative Strategist and a recent graduate in MEng Mathematics and Computer Science from University College London (UCL).</p>
+            <p>I am an eTrading Quant and a recent graduate in MEng Mathematics and Computer Science from University College London (UCL).</p>
             <p>My studies are focused on Machine Learning and Statistics, and I am interested in learning more about Machine Learning, Quantitative Finance, Deep Learning and Computational Biology.</p>
         </section>
         <section id="research">
